# Ouster-Lidar

./: CMakeLists.txt  CMakeSettings.json  README.md  testPython.py
ouster_client/src/: example.cpp
ouster_example/: CMakeLists.txt
ouster_example/ouster_client/src/: lidar_scan.cpp
